refactor(core): replace bounds logic with Math.clamp in noise color calculation
Took 7 seconds